[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/right_sidebar/helpers/NodeDisplay.tscn" type="PackedScene" id=1]
[ext_resource path="res://gfx/ui_elements/right_sidebar/base_image.png" type="Texture" id=2]
[ext_resource path="res://scenes/right_sidebar/helpers/SidebarTitle.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/right_sidebar/helpers/RegionDisplay.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/right_sidebar/RightSidebar.gd" type="Script" id=5]

[node name="RightSidebar" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1092.0
margin_bottom = -263.0
rect_min_size = Vector2( 308, 533 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SidebarTitle" parent="VBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 308.0
margin_bottom = 65.0

[node name="RegionDisplay" parent="VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 69.0
margin_right = 308.0
margin_bottom = 147.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 151.0
margin_right = 308.0
margin_bottom = 463.0
rect_min_size = Vector2( 308, 312 )
custom_constants/margin_top = 0
custom_constants/margin_left = 23
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NodeBox" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
margin_left = 23.0
margin_right = 308.0
margin_bottom = 312.0
custom_constants/separation = 0

[node name="Node1" parent="VBoxContainer/MarginContainer/NodeBox" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 285.0
margin_bottom = 78.0

[node name="Node2" parent="VBoxContainer/MarginContainer/NodeBox" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 78.0
margin_right = 285.0
margin_bottom = 156.0

[node name="Node3" parent="VBoxContainer/MarginContainer/NodeBox" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 156.0
margin_right = 285.0
margin_bottom = 234.0

[node name="Node4" parent="VBoxContainer/MarginContainer/NodeBox" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 234.0
margin_right = 285.0
margin_bottom = 312.0
